--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -99,40 +99,21 @@
   <!-- Main Content -->
   <div class="container">
     <div class="row">
-      {{ if eq .Site.Params.sidebar.enable false }}
+      <div class="content-vertical-split">
+        <div class="content-image-container">
+          <img src="/img/img2.jpg" alt="">
+          <img src="/img/img3.jpg" alt="">
+        </div>
 
-      <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1
-      postlist-container">
-        {{ block "container" . }}{{ end }}
-      </div>
-      <!-- Sidebar Container -->
-      <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1
-      sidebar-container">
-        <!-- Featured Tags -->
-        {{ partial "featured-tags.html" . }}
-        <!-- Friends Blog -->
-        {{ partial "friends.html" . }}
-      </div>
+        <div class="content-text-container">
+          <h3>About us</h3>
+          <p>Based in Bilborough and serving the surrounding areas, we are available 24 hours a day, 7 days a week for breakdown recovery and roadside assistance for when the unexpected happens.</p>
 
-      {{ else }}
-      <!-- USE SIDEBAR -->
-      <!-- PostList Container -->
-      <div class="col-lg-8 col-lg-offset-1 col-md-8 col-md-offset-1 col-sm-12
-      col-xs-12 postlist-container">
-        {{ block "container" . }}{{ end }}
+          <a class="btn btn--primary" href="/contact">
+            Contact us
+          </a>
+        </div>
       </div>
-      <!-- Sidebar Container -->
-      <div class="col-lg-3 col-lg-offset-0 col-md-3 col-md-offset-0 col-sm-12
-      col-xs-12 sidebar-container">
-
-        <!-- Featured Tags -->
-        {{ partial "featured-tags.html" . }}
-        {{ partial "short-about.html" . }}
-        <!-- Friends Blog -->
-        {{ partial "friends.html" . }}
-
-      </div>
-      {{ end }}
 
     </div>
   </div>
