--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -101,15 +101,15 @@
     <div class="row">
       <div class="content-vertical-split">
         <div class="content-image-container">
-          <img src="/img/img2.jpg" alt="">
-          <img src="/img/img3.jpg" alt="">
+          <img src="{{ "/img/img2.jpg" | relURL }}" alt="">
+          <img src="{{ "/img/img3.jpg" | relURL }}" alt="">
         </div>
 
         <div class="content-text-container">
           <h3>About us</h3>
           <p>Based in Bilborough and serving the surrounding areas, we are available 24 hours a day, 7 days a week for breakdown recovery and roadside assistance for when the unexpected happens.</p>
 
-          <a class="btn btn--primary" href="/contact">
+          <a class="btn btn--primary" href="{{ "/contact" | relURL }}">
             Contact us
           </a>
         </div>
