--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -416,6 +416,8 @@ samp {
     a {
       font-size: 13px;
       line-height: 28px;
+      text-shadow: none;
+      color: #444;
     }
 
     .navbar-collapse {
@@ -628,6 +630,7 @@ samp {
 
       .navbar-brand {
         color: $gray-dark;
+        text-shadow: none;
 
         &:hover,
         &:focus {
@@ -639,6 +642,7 @@ samp {
         li {
           a {
             color: $gray-dark;
+            text-shadow: none;
 
             &:hover,
             &:focus {
@@ -697,7 +701,7 @@ samp {
   background-attachment: scroll;
   @include background-cover;
   // NOTE: Background images are set within the HTML using inline CSS!
-  margin-bottom: 0px;
+  margin-bottom: 16px;
 
   /* 0 on mobile, modify by Hux */
   @media only screen and (min-width: 768px) {
@@ -707,17 +711,18 @@ samp {
 
   background-position-y: 34%;
   filter: contrast(1.1) saturate(1.1);
+  position: relative;
   box-shadow: inset 0 -10px 10px -10px #000;
 
   &:after {
     content: "";
     display: block;
-    width: 100%;
-    height: 100%;
     box-shadow: inset 0 0 100px #222;
     position: absolute;
     top: 0;
     left: 0;
+    right: 0;
+    bottom: 0;
     pointer-events: none;
   }
 
